syntax = "proto3";
package users;

option csharp_namespace = "Users.Kafka.Contracts";

import "google/protobuf/timestamp.proto";

message UserCreationKey {
  int64 user_id = 1;
}

message UserCreationValue {
  
  oneof event {
    UserCreated user_created = 1;
  }

  message UserCreated {
    int64 user_id = 1;
    google.protobuf.Timestamp created_at = 2;
  }
}